Fix: CSS on aligning name of station and the junction of a branch on strip map

--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -194,9 +194,9 @@ h1.yellow a, h3.yellow a {
 
 .branch-corner {
   overflow: hidden;
-  min-width: 62px;
+  min-width: 60px;
   display: inline-block;
-  margin: 0 7px 0 0;
+  margin: 0;
 }
 
 .branch-start {
